Updates to comments, removed some superfluous code

--- a/accounting.html
+++ b/accounting.html
@@ -14,7 +14,7 @@
 <body>
     <section class="container">
         <header>
-            <h2>Edit Question</h2>
+            <h2>Create MOM Question</h2>
         </header>
         <div id="editorContainer" class="editor-container">
             <question-edit-input id="questionEditInput"></question-edit-input>
